--- a/CopBap/copbap/pubspec.yaml
+++ b/CopBap/copbap/pubspec.yaml
@@ -1,4 +1,4 @@
-name: appbar
+name: copbap
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -46,8 +46,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/초대형거인.jpg
     - assets/Hyunsangsubae.jpg
-    - assets/mad.jpg
+    - assets/attack.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
