--- a/CloneUber/uber/android/app/src/main/AndroidManifest.xml
+++ b/CloneUber/uber/android/app/src/main/AndroidManifest.xml
@@ -37,5 +37,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCUPExTV7aiRkjww_O51UtcpXX3uTxAlek"/>
     </application>
 </manifest>
